--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
     "build": "turbo run build",
     "dev": "turbo run dev",
     "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "test:unit": "turbo run test:unit"
   },
   "devDependencies": {
     "@turbo/gen": "^1.9.7",
     "eslint": "^7.32.0",
-    "eslint-config-custom": "*",
-    "prettier": "^2.5.1",
+    "eslint-config-prettier": "^9.0.0",
+    "prettier": "^2.8.8",
     "turbo": "latest"
   },
   "name": "game-stats",
