--- a/turbo.json
+++ b/turbo.json
@@ -6,6 +6,15 @@
       "dependsOn": ["^build"],
       "outputs": [".next/**", "!.next/cache/**"]
     },
+    "test:unit": {
+      "inputs": [
+        "src/**/*.js",
+        "src/**/*.ts",
+        "src/**/*.jsx",
+        "src/**/*.tsx"
+      ],
+      "cache": false
+    },
     "lint": {},
     "dev": {
       "cache": false,
